--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -5,5 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body background="meeseeks.jpg">
+    <h1>Hiiiiiii!!!!!!</h1>
 </body>
 </html>
