--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -4,7 +4,7 @@
     <title>Rick and Morty demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body background="meeseeks.jpg">
-    <h1>Hola!!!!Rocaaaaaa!!!!</h1>
+<body background="picklerick.jpg">
+    <h1 style="color:green">Hello !!!!!</h1>
 </body>
 </html>
