--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -4,7 +4,7 @@
     <title>Rick and Morty demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body background="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/2014._Camp_Nou._M%C3%A9s_que_un_club._Barcelona_B40.jpg/1200px-2014._Camp_Nou._M%C3%A9s_que_un_club._Barcelona_B40.jpg">
+<body background="https://upload.wikimedia.org/wikipedia/commons/c/c8/The_Santiago_Bernabeu_Stadium_-_U-g-g-B-o-y.jpg">
     <h1 style="color:green">Hello !!!!!</h1>
 </body>
 </html>
