--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -19,13 +19,10 @@
          redirect: 'follow', 
          referrer: 'no-referrer'
          })
-         .then(() => {console.log('error-done')})
-         
-           
-         }
+         .then(() => {console.log('error-done')})}
          
          (function(){
-            //trigger()
+            trigger()
          }())
          
       </script>
